--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 #ignore thumbnails created by windows
 Thumbs.db
 #Ignore files build by Visual Studio
@@ -29,5 +28,4 @@ _ReSharper*/
 [Tt]est[Rr]esult*
 *.dbmdl
 *.csproj.VisualState.xml
-DatabaseServer/sql/*
-Database/sql/*
+sql/
